lectura de nodos del DOM

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
+        <p>nombre de <strong>usuario</strong></p>
+        <button>Login</button>
+        <button>Signup</button>
+
         <script src="js/producto.js"></script>
         <script src="js/user_profile.js"></script>
         <script src="js/app.js"></script>
