--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <p>nombre de <strong>usuario</strong></p>
-        <button>Login</button>
-        <button>Signup</button>
+        <button id="login" class="button">Login</button>
+        <button class="button">Signup</button>
+        <button >Signout</button>
 
         <script src="js/producto.js"></script>
         <script src="js/user_profile.js"></script>
