--- a/index.html
+++ b/index.html
@@ -17,9 +17,17 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <p>nombre de <strong>usuario</strong></p>
+        
+        <input id="usuario" type="text" placeholder="Ingrese usuario">
+        </br>
         <button id="login" class="button">Login</button>
         <button class="button">Signup</button>
         <button >Signout</button>
+
+        </br>
+        <ul id="personas">
+
+        </ul>
 
         <script src="js/producto.js"></script>
         <script src="js/user_profile.js"></script>
