--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
 
         </ul>
 
+        <ul id="myCarrito">
+
+        </ul>
+
         <script src="js/producto.js"></script>
         <script src="js/user_profile.js"></script>
         <script src="js/app.js"></script>
